# advent-of-code

./: .gitignore  .mise.toml  Cargo.toml  Justfile  README.org  advent-of-code  advent_of_code-0.0-0.rockspec  go.mod  mix.exs  project.janet  solver
.mise/tasks/: compile
advent_of_code/: __init__.py  __main__.py  cli.py
cmd/advent-of-code/: main.go
examples/: y2015d01p1.yaml  y2015d01p2.yaml  y2022d01p1.yaml  y2023d01p1.yaml
lib/: Cargo.toml  advent_of_code.ex
lib/advent_of_code/: solution.ex
lib/advent_of_code/s2023/: e01.ex
lib/advent_of_code/y2023/: d01.ex
lib/mix/tasks/: list.ex  solve.ex
lib/src/: common.rs  lib.rs  prelude.rs  puzzle.rs  sample.rs
lib/src/common/: grid.rs  parse.rs  plane.rs
lib/src/s2022/: e00.rs  e01.rs  e02.rs  e03.rs  e04.rs  e05.rs  e06.rs  e07.rs  e08.rs  e09.rs  e10.rs  e11.rs  e12.rs  e13.rs  e14.rs  mod.rs
lib/src/y2022/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs
src/: main.janet  main.lua  main.rs
test/: advent_of_code_test.exs
test/advent_of_code/s2023/: e01_test.exs
