[package]
name = "advent-of-code"
description = "Solutions for AOC puzzles"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
chrono = "0.4.23"
regex = "1.7.0"
